tests/rustdoc-ui/issues/issue-79467.stderr
error[E0224]: at least one trait is required for an object type
  --> $DIR/issue-79467.rs:4:5
   |
LL |     dyn 'static: 'static + Copy,
   |     ^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0224`.
